Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40378

Creating a custom QTextCodec when ICU is not used will cause it to not create the standard codecs when needed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0 RC
    • 5.3.1, 5.4.0 Beta
    • Core: Other
    • None
    • Windows

    Description

      Creating a custom QTextCodec when ICU is not used will cause it to not create the standard codecs when needed. The reason is because when it goes to initialize the standard codecs it checks if the list of codecs is not empty which it is not due to the fact that the custom one is already added to it. If ICU is enabled then this is not a problem as it still ensures that is available anyway.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes